# flappy-thief

./: LICENSE  README.md
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/assets/: bundle.txt
app/src/main/assets/shaders/: sprite.frag  sprite.vert
app/src/main/code/: animation.cpp  animation.h  app_clock.cpp  app_clock.h  app_delegate.cpp  asset_loader.cpp  asset_loader.h  bundle.cpp  bundle.h  game.cpp  game.h  game_state.h  mat3.h  rect.h  renderer.cpp  renderer.h  score_label.cpp  score_label.h  sprite.h  types.h  user_interface.cpp  user_interface.h  vec2.h  world.cpp  world.h
gradle/wrapper/: gradle-wrapper.properties
